--- a/RoyalPlayingGamev2/RoyalPlayingGamev2.csproj
+++ b/RoyalPlayingGamev2/RoyalPlayingGamev2.csproj
@@ -76,7 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\MovingUnit.cs" />
+    <Compile Include="Assets\Scripts\MainCameraScript.cs" />
     <Compile Include="Assets\Scripts\PlayerScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
