--- a/RoyalPlayingGamev2/RoyalPlayingGame/RoyalPlayingGame.csproj
+++ b/RoyalPlayingGamev2/RoyalPlayingGame/RoyalPlayingGame.csproj
@@ -36,7 +36,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeadUnitListener.cs" />
+    <Compile Include="GlobalListener.cs" />
     <Compile Include="Dialogs\Answer.cs" />
     <Compile Include="Dialogs\Dialog.cs" />
     <Compile Include="Dialogs\DialogListener.cs" />
@@ -59,12 +59,10 @@
     <Compile Include="QuestManager.cs" />
     <Compile Include="Quests\Quest.cs" />
     <Compile Include="Quests\QuestStage.cs" />
+    <Compile Include="Quests\QuestStages\ComplexQuestStage.cs" />
     <Compile Include="Quests\QuestStages\KillUnitStage.cs" />
-    <Compile Include="Quests\QuestStages\KillUnitStageGroup.cs" />
     <Compile Include="Quests\QuestStages\PickItemStage.cs" />
-    <Compile Include="Quests\QuestStages\PickItemStageGroup.cs" />
     <Compile Include="Quests\QuestStages\ToPointStage.cs" />
-    <Compile Include="Quests\QuestStages\ToPointStageGroup.cs" />
     <Compile Include="Quests\QuestStages\ToUnitStage.cs" />
     <Compile Include="Spell\NegativeSpells\DragonBreath.cs" />
     <Compile Include="Spell\NegativeSpells\FrostDragonHead.cs" />
