перемещаемые по инвентарю предметы

--- a/RoyalPlayingGamev2/RoyalPlayingGamev2.csproj
+++ b/RoyalPlayingGamev2/RoyalPlayingGamev2.csproj
@@ -300,6 +300,8 @@
     <Compile Include="Assets\Quests\DebugQuest.cs" />
     <Compile Include="Assets\Scripts\Damageble.cs" />
     <Compile Include="Assets\Scripts\EnemyScript.cs" />
+    <Compile Include="Assets\Scripts\InventoryPage.cs" />
+    <Compile Include="Assets\Scripts\ItemDragHandler.cs" />
     <Compile Include="Assets\Scripts\MainCameraScript.cs" />
     <Compile Include="Assets\Scripts\MovingObjectScript.cs" />
     <Compile Include="Assets\Scripts\MovingSpellScript.cs" />
@@ -307,11 +309,14 @@
     <Compile Include="Assets\Scripts\QuestTrigger.cs" />
     <Compile Include="Assets\Scripts\RepeatSpriteBoundary.cs" />
     <Compile Include="Assets\Scripts\SimpleEnemyScript.cs" />
+    <Compile Include="Assets\Scripts\SlotHandler.cs" />
+    <Compile Include="Assets\Scripts\StaticSpell.cs" />
     <Compile Include="Assets\Scripts\StoneScript.cs" />
     <Compile Include="Assets\Scripts\Talker.cs" />
     <Compile Include="Assets\Scripts\TurnPointScript.cs" />
     <Compile Include="Assets\Scripts\U_DialogManager.cs" />
     <Compile Include="Assets\Scripts\U_GameManager.cs" />
+    <Compile Include="Assets\Scripts\U_Items_Repository.cs" />
     <Compile Include="Assets\Scripts\U_QuestManager.cs" />
     <Compile Include="Assets\Scripts\UnitScript.cs" />
     <Compile Include="Assets\Scripts\U_UIManager.cs" />
